# archive

./: .gitignore
unified-framework/: .gitignore  DETAILED_METHODOLOGY.md  EXECUTIVE_SUMMARY.md  GEOFAC_README.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  KAPPA_BIAS_IMPLEMENTATION.md  Makefile  PR123_INTEGRATION_SUMMARY.md  README.md  RED_TEAM_VERIFICATION_REPORT.md  REVIEW_FIXES.md  SHELL_EXCLUSION_SUMMARY.md  VERIFICATION_SUMMARY.md  build.gradle  gate127_success.json  pyproject.toml  run_challenge.bat  run_challenge.sh
unified-framework/.github/: ISSUE_TEMPLATE.md  copilot-instructions.yml
unified-framework/.insights/: insights-2025-11-14.md
unified-framework/Docs/: 01-Overview.md  02-Quickstart.md  03-Reproduction.md  04-Validated-Results.md  05-Hypotheses.md  99-Changelog.md  AGENTS.md  AMX_BUILD_NOTES.md  AMX_IMPLEMENTATION_SUMMARY.md  API_DOCUMENTATION.md  AUTHORS.md  AXIS_MOD3_IMPLEMENTATION_SUMMARY.md  BENCHMARK_RESULTS.md  BIOPYTHON_COMPATIBILITY.md  BITCOIN_MINING_README.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_RESPONSE.md  COMPUTATIONAL_INTENSIVE_TASKS.md  CONSOLIDATION_INDEX.md  CORNERSTONE_QUICK_START.md  CRYPTO_OPTIMIZATION_SUMMARY.md  DETAILED_FINDINGS_REPORT.md  DOCUMENTATION_UPDATE_CHANGELOG.md  ENGINEERING_TEAM_INTERACTIONS.md  ENHANCED_ERROR_RATE_ANALYSIS.md  EXPERIMENT_SETUP_TEMPLATE.md  FRAME_DEPENDENT_UNCERTAINTY.md  FULL_FACTORIZATION_2_IMPLEMENTATION.md  FULL_FACTORIZATION_EXPERIMENT.md  GEMINI.md  GEOMETRIC_CENTER_SOLUTION.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  ISSUE_548_RESOLUTION.md  LEGACY.md  LI_Z5D_FALSIFICATION_RESULTS.md  LLM_AGENT_GUIDE.md  LLM_VALIDATION_INSTRUCTIONS.md  LLM_VARIANCE_BOUND_TESTING.md  (+102 more)
unified-framework/app-build/: Dockerfile  NEXT_STEPS.md  PROGRESS.md  PROJECT.md  README.md  STATUS.md  docker-compose.yml  package-lock.json  requirements.txt  serverless.yml
unified-framework/benchmarks/: README.md  __main__.py  conical_flow_speedup_benchmark.py  geodesic_density_benchmark.py  run_all_benchmarks.py  stadlmann_extended_validation.py
unified-framework/cli/: README.md  __init__.py  challenge_127.py  keygen_ab.py
unified-framework/configs/: challenge-127.yml  simplex_anchor_experiment.json
unified-framework/data/: 2025_08_26_Four_Stage_Process.ipynb  (+1 more)
(+2402 files in other folders)
