[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unified-framework"
version = "1.0.0"
description = "Z Framework - Mathematical framework for unified quantum and biological systems"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Dionisio Alberto Lopez III", email = "zfifteen@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "biopython>=1.83,<2.0",
    "nltk",
    "sentence-transformers~=2.7.0",
    "numpy~=1.26.0",
    "matplotlib~=3.8.0",
    "mpmath~=1.3.0",
    "sympy~=1.14.0",
    "scipy~=1.16.1",
    "pandas~=1.5.0",
    "scikit-learn~=1.3.0",
    "statsmodels~=0.14.5",
    "pillow~=11.3.0",
    "pytest~=8.4.1",
    "qutip~=5.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/zfifteen/unified-framework"
Repository = "https://github.com/zfifteen/unified-framework"
Documentation = "https://github.com/zfifteen/unified-framework/docs"
Issues = "https://github.com/zfifteen/unified-framework/issues"

[project.scripts]
spinor-demo = "demo_spinor_geodesic:main"
validate-dependencies = "test_dependencies:main"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-dir]
"" = "."

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests", "src/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true